--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "rsuite": "^4.3.3"
   },
   "scripts": {
