--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "echarts": "^4.7.0",
     "echarts-countries-js": "^1.0.4",
     "react": "^16.10.0",
@@ -17,7 +18,8 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "rsuite": "^4.3.3"
+    "rsuite": "^4.7.5",
+    "rsuite-table": "^3.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
