--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "echarts": "^4.7.0",
     "echarts-countries-js": "^1.0.4",
+    "joi": "^17.3.0",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
     "react-hook-form": "^6.8.2",
