--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "axios": "^0.19.2",
     "echarts": "^4.7.0",
     "echarts-countries-js": "^1.0.4",
+    "joi": "^17.3.0",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
-    "react-redux": "^7.2.0",
+    "react-hook-form": "^6.8.2",
+    "react-redux": "^7.2.1",
     "react-router": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "rsuite": "^4.7.5",
