--- a/package.json
+++ b/package.json
@@ -3,21 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reach/router": "^1.3.3",
-    "@rsuite/charts": "^3.2.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "echarts": "^4.7.0",
     "echarts-countries-js": "^1.0.4",
     "joi": "^17.3.0",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
-    "react-hook-form": "^6.8.2",
     "react-redux": "^7.2.1",
-    "react-router": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "recharts": "^2.0.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "rsuite": "^4.7.5",
