--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "echarts-countries-js": "^1.0.4",
     "joi": "^17.3.0",
+    "jwt-decode": "^3.1.2",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
     "react-redux": "^7.2.1",
