--- a/package.json
+++ b/package.json
@@ -7,17 +7,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "echarts-countries-js": "^1.0.4",
+    "history": "^4.10.1",
     "joi": "^17.3.0",
     "jwt-decode": "^3.1.2",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
-    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "recharts": "^2.0.4",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
     "rsuite": "^4.7.5",
     "rsuite-table": "^3.13.1",
     "validator": "^13.5.2"
