--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "history": "^4.10.1",
-    "joi": "^17.3.0",
     "jwt-decode": "^3.1.2",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
@@ -17,6 +16,7 @@
     "recharts": "^2.0.4",
     "rsuite": "^4.7.5",
     "rsuite-table": "^3.13.1",
+    "uuid": "^8.3.2",
     "validator": "^13.5.2"
   },
   "scripts": {
