--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rsuite/icons": "^1.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -14,8 +15,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "recharts": "^2.0.4",
-    "rsuite": "^4.7.5",
-    "rsuite-table": "^3.13.1",
+    "rsuite": "^5.0.0",
+    "rsuite-table": "^5.0.0",
     "uuid": "^8.3.2",
     "validator": "^13.5.2"
   },
